@@ -73,7 +73,6 @@ $chg_evt_handler = (PMA_USR_BROWSER_AGENT == 'IE' && PMA_USR_BROWSER_VER >= 5)
         </td>
         <td>
             <input type="button" id="button_generate_password" value="<?php echo $strGenerate; ?>" onclick="suggestPassword()" />
-            <input type="button" id="button_copy_password" value="<?php echo $strCopy; ?>" onclick="suggestPasswordCopy(this.form)" />
             <input type="text" name="generated_pw" id="generated_pw" />
         </td>
         </tr>
