@@ -59,6 +59,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Tomas Srnka - tomassrnka
 + patch #2745215 [edit] Multi-row change with "]" improved, 
   thanks to Virsacer - virsacer 
++ rfe #2657696 Automatically copy generated password
 
 3.1.5.0 (not yet released)
 - patch #2739001 [export] XML does not allow spaces in element names, 
